changed alignment of output text, removed file input

--- a/macros.html
+++ b/macros.html
@@ -4,13 +4,9 @@
 
 <link rel="stylesheet" href="macros.css">
 
-<input type="file" name="file" id="file">
-<script type="text/javascript" src="macros.js"></script>
-
 <header id="InputLabel">
    <h3>Input</h3>
 </header>
-
 
 <table id="FoodTable">
    <thead>
@@ -47,7 +43,34 @@
 </table>
 
 <div id="OutputTextDiv">
+   <div id="OutputSubDiv0"></div>
+   </br>
+   <div id="OutputSubDiv1"></div>
+   <div id="OutputSubDiv2"></div>
+   <div id="OutputSubDiv3"></div>
+   </br></br>
+   <div id="OutputSubDiv4"></div>
+   </br></br>
+   <div id="OutputSubDiv5"></div>
+   </br>
+   <div id="OutputSubDiv6"></div>
+   <div id="OutputSubDiv7"></div>
+   <div id="OutputSubDiv8"></div>
+   <div id="OutputSubDiv9"></div>
+   <div id="OutputSubDiv10"></div>
+   <div id="OutputSubDiv11"></div>
+   </br></br>
+   <div id="OutputSubDiv12"></div>
+   </br>
+   <div id="OutputSubDiv13"></div>
+   </br>
+   <div id="OutputSubDiv14"></div>
+   </br></br>
+   <div id="OutputSubDiv15"></div>
+   <div id="OutputSubDiv16"></div>
 </div>
+
+<script type="text/javascript" src="macros.js"></script>
 
 </body>
 </html>
