added button to save output to file, changed column headers

--- a/macros.html
+++ b/macros.html
@@ -12,11 +12,11 @@
    <thead>
       <tr>
          <th>Food Item</th>
-         <th>Calories</th>
-         <th>Carbs</th>
-         <th>Protein</th>
-         <th>Fats</th>
-         <th>Sugars</th>
+         <th>Cal</th>
+         <th>Carb(g)</th>
+         <th>Prot(g)</th>
+         <th>Fat(g)</th>
+         <th>Sug(g)</th>
       </tr>
    </thead>
    <tbody>
@@ -31,11 +31,11 @@
   <thead>
     <tr>
          <th>Food Item</th>
-         <th>Calories</th>
-         <th>Carbs</th>
-         <th>Protein</th>
-         <th>Fats</th>
-         <th>Sugars</th>
+         <th>Cal</th>
+         <th>Carb(g)</th>
+         <th>Prot(g)</th>
+         <th>Fat(g)</th>
+         <th>Sug(g)</th>
     </tr>
   </thead>
   <tbody>
@@ -68,6 +68,9 @@
    </br></br>
    <div id="OutputSubDiv15"></div>
    <div id="OutputSubDiv16"></div>
+</div>
+<button id="saveAsTextFileButton" onclick="saveTextAsFile()">Save Output to File</button>
+<!--<div id="testdiv">-->
 </div>
 
 <script type="text/javascript" src="macros.js"></script>
