updated html to include some instructions

--- a/macros.html
+++ b/macros.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="macros.css">
 
 <header id="InputLabel">
-   <h3>Input</h3>
+   <h3>Input (click on a row to add to Output)</h3>
 </header>
 
 <table id="FoodTable">
@@ -24,7 +24,7 @@
 </table>
 
 <header id="OutputLabel">
-   <h3>Output</h3>
+   <h3>Output (click on a row to remove)</h3>
 </header>
 
 <table id="OutputTable">
